[package]
name = "rgdrive"
version = "0.1.0"
authors = ["Cam Williams <cam@camwilliams.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
serde = { version = "1.0.104"}
serde_json = "1.0.48"
google_api = { path = "../google_api"}
inotify = "0.8.2"
clap = "2.33.0"
libc = "0.2.67"
url = "2.1.1"